fix angle mask covering heading interaction

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -83,7 +83,6 @@ article.post{
     width: 100%;
     position: absolute;
     top: 0px;
-    z-index: 3;
   }
 }
 
